cluster/apps/default/papermerge/papermerge-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papermerge
  namespace: papermerge
spec:
  selector:
    matchLabels:
      app: papermerge
  template:
    metadata:
      labels:
        app: papermerge
    spec:
      containers:
        - name: papermerge
          image: linuxserver/papermerge:version-v2.0.1
          volumeMounts:
            - name: papermerge-data
              mountPath: /data
            - name: papermerge-config
              mountPath: /config
          ports:
            - containerPort: 8000
      volumes:
        - name: papermerge-data
          persistentVolumeClaim:
            claimName: data
        - name: papermerge-config
          persistentVolumeClaim:
            claimName: papermerge
