cluster/apps/default/papermerge/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: papermerge
spec:
  selector:
    app: redis
  ports:
  - port: 6379
