cluster/apps/default/papermerge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papermerge
  namespace: papermerge
  labels:
    name: papermerge
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  rules:
    - host: papermerge.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: papermerge
                port:
                  number: 8000
  tls:
    - hosts:
        - papermerge.${DOMAIN}
      secretName: papermerge-cert
